# iots-python

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE.txt  Makefile  README.md  functions.py  pyproject.toml
.github/workflows/: ci.yaml
api/: __init__.py  actions.py  api.py  categories.py  category.py  errors.py  events.py  obj.py  properties.py  property.py  space.py  spaces.py  stack.py  thing.py  things.py
auth/: token.py
docs/: conf.py  index.rst  iots.internal.rst  iots.models.rst  iots.rst  readme.rst  requirements.txt  swx.internal.rst  swx.models.rst  swx.rst
iots/: api.py  security.py
iots/apis/: actions.py  categories.py  communications.py  cursor.py  email.py  events.py  models1.py  mqtt_credentials.py  mqtt_credentials1.py  properties.py  properties_history.py  query.py  reset_secret.py  spaces.py  things.py  versions.py
iots/internal/: content_type.py  resource.py  runtime_expr.py
iots/models/: basemodel.py  exceptions.py  models.py  pagination.py  primitives.py
iots/models/extensions/: pagination.py
models/: anythingdb.py  basemodel.py  property.py
openapi/: anythingdb.yaml  anythingdb_openapi.yaml
swx/: actions.py  api.py  categories.py  consts.py  errors.py  events.py  functions.py  obj.py  properties.py  spaces.py  things.py  token.py
swx/auth/: token.py
swx/internal/: pagination.py  resource.py
swx/models/: anythingdb.py  basemodel.py  paginator.py
swx/tests/: test_api.py  test_auth.py  test_functions.py
tests/: common.py  test_api.py  test_api_actions.py  test_api_categories.py  test_api_email.py  test_api_events.py  test_api_object.py  test_api_pagination.py  test_api_properties.py  test_api_properties_history.py  test_api_resource.py  test_api_things.py  test_auth.py  test_base_model.py  test_functions.py  test_security.py
tools/: clean_models.py
