[tool.poetry]
name = "iots"
version = "0.4.0"
description = "A Python client for the Altair IoT Studio API"
authors = ["Daniel Sánchez Gallego <dsanchez@altair.com>"]
readme = "README.md"
documentation = "https://iots.readthedocs.io/"
repository = "https://github.com/altairengineering/iots-python"
keywords = ["iot", "altair", "smartcore", "smartworks", "api", "client", "library"]
classifiers = ["Topic :: Software Development :: Libraries"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
pydantic = "^1.10.18"
xmltodict = "^0.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
httpretty = "^1.1.4"

[tool.poetry.group.docs.dependencies]
sphinx = "5.3.0"
sphinx_rtd_theme = "^1.1.1"
sphinx-copybutton = "^0.5.2"
autodoc_pydantic = "^1.8.0"
m2r = "^0.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
